hphp/test/zend/good/Zend/tests/errmsg_037.php.expectf
Fatal error: Properties cannot be declared abstract in %s/errmsg_037.php on line 4
